# paper-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  README_zh.md  RESEARCH_MEMORY.md  RESEARCH_SOUL.md  SECURITY.md  alembic.ini  docker-compose.yml  mkdocs.yml  project_plan.md  pyproject.toml  requirements.txt  test_backend.py  test_user_system.py  verify_backend.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler-config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml  docs.yml  labeler.yml  release.yml  size-labeler.yml  stale.yml  sync-wiki.yml  welcome.yml
docs/: api.md  architecture.md  changelog.md  configuration.md  deployment.md  faq.md  index.md  installation.md  mcp.md  quickstart.md  requirements.txt  research-paradigms.md  roadmap.md  skills.md  user-guide.md
docs/api/: index.md
docs/architecture/: index.md
docs/user-guide/: documents.md  (+2 more)
extension/: README.md  content.js  manifest.json  options.html  options.js  popup.html  popup.js
k8s/: backend-api.yaml  backend-worker.yaml  ingress.yaml  minio.yaml  namespace.yaml  postgres.yaml  redis.yaml  secrets.yaml
latex/: README.md  paperagent.sty
mcp/: README.md  claude_desktop_config.json  server.py
paper_agent/: CONTRIBUTING.md  LICENSE  __init__.py  config.json  requirements.txt  setup.py
skills/: README.md  daily-briefing.md  literature-review.md  paper-analysis.md  research-gap.md  systematic-review.md  writing-assistant.md
(+180 files in other folders)
