[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-agent"
version = "1.1.0"
description = "AI-Powered Literature Management System — Upload, search, summarise & QA your academic papers."
readme = "README.md"
authors = [
    { name = "Paper Agent Team", email = "paper.agent@example.com" },
]
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",

    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "aiosqlite>=0.19.0",

    # AI / Embedding
    "chromadb>=1.5.8",
    "sentence-transformers>=2.2.2",

    # PDF processing
    "pypdf>=3.17.0",

    # Validation & settings
    "pydantic-settings>=2.1.0",

    # HTTP client (for LLM API calls)
    "httpx>=0.26.0",

    # Async utils
    "anyio>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]

[tool.setuptools.packages.find]
include = ["paper_agent*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["paper_agent/tests"]

[tool.coverage.run]
source = ["paper_agent"]